fix: overflowing image

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -79,6 +79,7 @@ section.Services > div.ServicesExamples > img {
   position: absolute;
   top: 0;
   border-radius: 8px;
+  max-width: 100%;
   height: 100%;
   visibility: hidden;
   opacity: 0;
